Fix style, on mobile, make the delete icon in messages always visible

--- a/resources/sass/components/messages.scss
+++ b/resources/sass/components/messages.scss
@@ -76,6 +76,10 @@
             color:            $message__icon;
             background-color: transparent;
 
+            @include media-breakpoint-down(sm) {
+                opacity: 1;
+            }
+
             &:hover {color: $message__icon__hover;}
         }
 
